# daneel

./: .gitignore  .gitmodules  AGENTS.md  AGENTS_WORKFLOW.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  MEMORY.md  README.md  development_setup.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: verify-live-route.yml
assets/: main.css
docs/: agent_chat_primitive_design.md  daneel_requirements.md  daneel_technical_design.md  tdd_review_feedback.md  ui_visual_design_reference.md
docs/agent-guides/: README.md  verification-and-browser.md
docs/agent-workflows/: DANEEL_QUICK_REF.md  DANEEL_WORKFLOW.md
docs/plans/: 2026-03-26-generic-live-updates.md
scripts/: dev.sh  github-admin.mjs  memory-manage.py  memory-recall.py  memory-recall.test.py  verify-dashboard-state.mjs  verify-dashboard-state.test.mjs  verify-live.mjs  verify-live.test.mjs  verify-route.mjs  watch-css.mjs
skills/brainstorming/: spec-document-reviewer-prompt.md  visual-companion.md
skills/dispatching-parallel-agents/: SKILL.md
skills/executing-plans/: SKILL.md
skills/github-admin/: SKILL.md  reference.md
skills/memory/: SKILL.md
skills/project-management/: SKILL.md
skills/refactoring/: SKILL.md
skills/requesting-code-review/: SKILL.md
skills/subagent-driven-development/: SKILL.md  code-quality-reviewer-prompt.md  implementer-prompt.md  (+1 more)
src/: app_state.rs  gateway.rs  graph_service.rs  live.rs  main.rs  router.rs  test_support.rs
styles/: app.css
tests/: e2e_mock_gateway.rs
(+170 files in other folders)
