[package]
name = "daneel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
dioxus-server = { version = "0.7.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent"] }

[features]
default = ["web", "fullstack"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
fullstack = ["dioxus/fullstack"]
server = ["dioxus/server", "dep:dioxus-server", "dep:futures-util", "dep:tokio", "dep:tokio-stream", "dep:tokio-tungstenite"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "time"]
optional = true

[dependencies.tokio-tungstenite]
version = "0.28"
optional = true

[dev-dependencies]
dioxus-history = "0.7.3"
dioxus-router = "0.7.3"
dioxus-ssr = "0.7.3"
libc = "0.2"
pollster = "0.4"
serial_test = "3"
tempfile = "3"
tungstenite = "0.28"
